--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,26 +4,100 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".LoginActivity"
+    android:backgroundTint="@color/primaryColor">
+
+    <ImageView
+        android:id="@+id/imageViewlogin"
+        android:layout_width="290dp"
+        android:layout_height="74dp"
+        android:background="@drawable/wownetlogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="55dp"/>
+
+    <TextView
+        android:id="@+id/textViewlogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:backgroundTint="@color/secondaryColor"
+        android:text="Sign in to your account"
+        android:textSize="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewlogin"
+        tools:layout_editor_absoluteX="40dp"
+        android:layout_marginLeft="40dp" />
+
+    <com.dicoding.capsregistration.ui.customView.emailEditText
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:id="@+id/emaillogin"
+        android:background="@drawable/cutom_edittext"
+        android:hint="   Email"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewlogin"
+        android:layout_margin="15dp"/>
+
+    <com.dicoding.capsregistration.ui.customView.passwordEditText
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:id="@+id/passwordlogin"
+        android:background="@drawable/cutom_edittext"
+        android:hint="   Password"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emaillogin"
+        android:layout_margin="15dp"/>
 
     <Button
-        android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btnlogin"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="@color/contentColor"
         android:text="Login"
-        app:layout_constraintBottom_toTopOf="@+id/btn_register"
+        android:textColor="@color/primaryColor"
+        android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordlogin"/>
 
-    <Button
-        android:id="@+id/btn_register"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
-        android:backgroundTint="@color/teal_200"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
+        android:layout_marginTop="190dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="Don't have an account?"
+            android:textSize="14sp"
+            android:textAlignment="center"
+            android:id="@+id/signupText"
+            android:textColor="@color/secondaryColor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign Up "
+            android:textAlignment="center"
+            android:textColor="@color/contentColor"
+            android:textSize="14sp"
+            android:id="@+id/regishere"
+            app:layout_constraintStart_toEndOf="@+id/signupText"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
