--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,7 +29,7 @@
         tools:layout_editor_absoluteX="40dp"
         android:layout_marginLeft="40dp" />
 
-    <com.dicoding.capsregistration.ui.customView.nameEditText
+    <com.example.capstoneproject.ui.customView.nameEditText
         android:id="@+id/firstname"
         android:layout_width="300dp"
         android:layout_height="50dp"
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         android:layout_margin="20dp"/>
 
-    <com.dicoding.capsregistration.ui.customView.nameEditText
+    <com.example.capstoneproject.ui.customView.nameEditText
         android:id="@+id/lastname"
         android:layout_width="300dp"
         android:layout_height="50dp"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/firstname"
         android:layout_margin="15dp"/>
 
-    <com.dicoding.capsregistration.ui.customView.emailEditText
+    <com.example.capstoneproject.ui.customView.emailEditText
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:id="@+id/emailtext"
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toBottomOf="@+id/lastname"
         android:layout_margin="15dp"/>
 
-    <com.dicoding.capsregistration.ui.customView.passwordEditText
+    <com.example.capstoneproject.ui.customView.passwordEditText
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:id="@+id/passwordtext"
@@ -81,7 +81,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailtext"
         android:layout_margin="15dp"/>
 
-    <com.dicoding.capsregistration.ui.customView.passwordEditText
+    <com.example.capstoneproject.ui.customView.passwordEditText
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:id="@+id/passwordconfirm"
