--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,23 @@
         android:id="@+id/navigation_home"
         android:name="com.example.capstoneproject.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_news"
         android:name="com.example.capstoneproject.ui.articles.ArticlesFragment"
         android:label="@string/title_news"
-        tools:layout="@layout/fragment_articles" />
+        tools:layout="@layout/fragment_articles">
+
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_settings"
         android:name="com.example.capstoneproject.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_settings">
+
+    </fragment>
 </navigation>
