--- a/app/src/main/res/layout/activity_otpactivity.xml
+++ b/app/src/main/res/layout/activity_otpactivity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OTPActivity"
+    tools:context=".ui.otp.OTPActivity"
     android:backgroundTint="@color/primaryColor">
 
     <ImageView
@@ -34,8 +34,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:text="We've sent the code to your Email"
-        android:textColor="@color/secPrimary"
+        android:textColor="@color/secondaryColor"
         android:id="@+id/txt"
         android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="parent"
