--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.LoginActivity"
+    tools:context=".LoginActivity"
     android:backgroundTint="@color/primaryColor">
 
     <ImageView
@@ -22,14 +22,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:backgroundTint="@color/secondaryColor"
+        android:backgroundTint="@color/secPrimary"
         android:text="Sign in to your account"
         android:textSize="16dp"
         app:layout_constraintTop_toBottomOf="@+id/imageViewlogin"
         tools:layout_editor_absoluteX="40dp"
         android:layout_marginLeft="40dp" />
 
-    <com.example.capstoneproject.ui.customView.emailEditText
+    <com.dicoding.capsregistration.ui.customView.emailEditText
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:id="@+id/emaillogin"
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewlogin"
         android:layout_margin="15dp"/>
 
-    <com.example.capstoneproject.ui.customView.passwordEditText
+    <com.dicoding.capsregistration.ui.customView.passwordEditText
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:id="@+id/passwordlogin"
@@ -50,6 +50,8 @@
         android:hint="   Password"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:drawableRight="@drawable/ic_visibility_off"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emaillogin"
@@ -85,7 +87,7 @@
             android:textSize="14sp"
             android:textAlignment="center"
             android:id="@+id/signupText"
-            android:textColor="@color/secondaryColor"
+            android:textColor="@color/secPrimary"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
