--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:backgroundTint="@color/secondaryColor"
+        android:backgroundTint="@color/secPrimary"
         android:text="Create your account"
         android:textSize="16dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -74,6 +74,7 @@
         android:id="@+id/passwordtext"
         android:background="@drawable/cutom_edittext"
         android:hint="   Password"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +88,7 @@
         android:id="@+id/passwordconfirm"
         android:background="@drawable/cutom_edittext"
         android:hint="   Confirm Password"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +126,7 @@
             android:textSize="14sp"
             android:textAlignment="center"
             android:id="@+id/signupText"
-            android:textColor="@color/secondaryColor"
+            android:textColor="@color/secPrimary"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
