--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -158,7 +158,7 @@
                         android:layout_height="match_parent"
                         android:paddingVertical="10dp"
                         android:paddingHorizontal="16dp"
-                        android:background="@color/purple_500"
+                        android:background="@color/secondaryColor"
                         android:gravity="center">
                         <TextView
                             android:layout_width="wrap_content"
@@ -189,7 +189,7 @@
                         android:layout_height="match_parent"
                         android:paddingVertical="10dp"
                         android:paddingHorizontal="16dp"
-                        android:background="@color/purple_500"
+                        android:background="@color/secondaryColor"
                         android:gravity="center">
                         <TextView
                             android:layout_width="wrap_content"
