--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,25 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.CapstoneProject" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/contentColor</item>
     </style>
     <color name="primaryColor">@color/white</color>
     <color name="secondaryColor">@color/black</color>
     <color name="contentColor">@color/blue</color>
     <color name="errorColor">@color/red</color>
     <color name="secPrimary">@color/secblack</color>
+    <style name="editTextStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:textColorHint">@color/secPrimary</item>
+        <item name="hintTextColor">@color/secondaryColor</item>
+        <item name="boxCornerRadiusTopStart">10dp</item>
+        <item name="boxCornerRadiusTopEnd">10dp</item>
+        <item name="boxCornerRadiusBottomStart">10dp</item>
+        <item name="boxCornerRadiusBottomEnd">10dp</item>
+        <item name="boxStrokeColor">@color/secondaryColor</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="android:textColor">@color/secondaryColor</item>
+        <item name="boxBackgroundColor">@color/primaryColor</item>
+        <item name="passwordToggleTint">@color/secondaryColor</item>
+        <item name="hintAnimationEnabled">false</item>
+    </style>
 </resources>
