--- a/app/src/main/res/menu/notifications_menu.xml
+++ b/app/src/main/res/menu/notifications_menu.xml
@@ -5,5 +5,6 @@
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/icon_notifications"
         android:title="@string/title_notifications"
-        app:showAsAction="always"/>
+        app:showAsAction="always"
+        android:iconTint="@color/primaryColor"/>
 </menu>
