--- a/app/src/main/res/drawable/article_item_bg.xml
+++ b/app/src/main/res/drawable/article_item_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/secondaryColor" />
     <stroke android:width="2dp"
-        android:color="#DDDDDD" />
+        android:color="@color/primaryColor" />
     <corners android:radius="16dp" />
 </shape>
