--- a/app/src/main/res/layout/activity_detail_articles.xml
+++ b/app/src/main/res/layout/activity_detail_articles.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.articles.detail_article.DetailArticleActivity">
+    tools:context=".ui.articles.detail_article.DetailArticleActivity"
+    android:backgroundTint="@color/primaryColor">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -18,8 +19,10 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/icon_back"
-            app:navigationIconTint="@color/white"
+            app:navigationIconTint="@color/primaryColor"
             app:title="Articles"
+            app:titleTextColor="@color/primaryColor"
+            android:backgroundTint="@color/contentColor"
             app:titleCentered="true" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -55,14 +58,15 @@
                     android:orientation="vertical"
                     android:background="@drawable/article_item_bg"
                     android:paddingHorizontal="14dp"
-                    android:paddingVertical="12dp">
+                    android:paddingVertical="12dp"
+                    android:backgroundTint="@color/primaryColor">
 
                     <TextView
                         android:id="@+id/title_article"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/sample_title_articles"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
@@ -72,7 +76,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:text="@string/sample_publish_date"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="14sp" />
 
                 </LinearLayout>
@@ -113,7 +117,8 @@
                     android:orientation="vertical"
                     android:background="@drawable/article_item_bg"
                     android:paddingHorizontal="14dp"
-                    android:paddingVertical="12dp">
+                    android:paddingVertical="12dp"
+                    android:backgroundTint="@color/primaryColor">
 
                     <TextView
                         android:id="@+id/desc_article"
@@ -121,7 +126,7 @@
                         android:layout_height="wrap_content"
                         android:lineSpacingMultiplier="1.2"
                         android:text="@string/sample_description_articles"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="16sp"
                         app:layout_constraintTop_toBottomOf="@+id/card_image"/>
 
@@ -137,7 +142,7 @@
                 android:text="@string/see_more"
                 android:textStyle="bold"
                 android:textSize="18sp"
-                android:textColor="@color/black"
+                android:textColor="@color/secondaryColor"
                 app:layout_constraintTop_toBottomOf="@+id/card_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -148,6 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="16dp"
+                android:backgroundTint="@color/primaryColor"
                 android:paddingBottom="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/text_see_more"
                 app:layout_constraintStart_toStartOf="parent"
