--- a/app/src/main/res/layout/activity_otpactivity.xml
+++ b/app/src/main/res/layout/activity_otpactivity.xml
@@ -74,7 +74,19 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btnotp"
+            android:id="@+id/btnsendotp"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="15dp"
+            android:backgroundTint="@color/contentColor"
+            android:text="Send OTP"
+            android:textColor="@color/primaryColor"
+            android:textSize="18dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/otplayout"/>
+        <Button
+            android:id="@+id/btnverifydotp"
             android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_marginTop="15dp"
@@ -84,7 +96,7 @@
             android:textSize="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/otplayout"/>
+            app:layout_constraintTop_toBottomOf="@+id/btnsendotp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -92,8 +104,8 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnotp"
-            android:layout_marginTop="190dp">
+            app:layout_constraintTop_toBottomOf="@+id/btnverifydotp"
+            android:layout_marginTop="150dp">
 
             <TextView
                 android:layout_width="wrap_content"
