--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -91,7 +91,7 @@
             style="@style/editTextStyle"
             app:hintEnabled="false">
 
-            <EditText
+            <com.example.capstoneproject.ui.customView.mobileEditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/mobile"
