--- a/app/src/main/res/layout/banner_items.xml
+++ b/app/src/main/res/layout/banner_items.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:cardCornerRadius="16dp"
     app:cardElevation="0dp"
-    android:layout_marginHorizontal="12dp">
+    android:layout_marginHorizontal="12dp"
+    android:backgroundTint="@color/primaryColor">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
