--- a/app/src/main/res/layout/home_article_items.xml
+++ b/app/src/main/res/layout/home_article_items.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/primaryColor">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
         app:cardCornerRadius="8dp"
+        android:backgroundTint="@color/primaryColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
@@ -29,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="@string/sample_publish_date"
         android:layout_marginStart="8dp"
-        android:textColor="@color/black"
+        android:textColor="@color/secondaryColor"
         android:textSize="12sp"
         app:layout_constraintTop_toTopOf="@+id/card_image"
         app:layout_constraintStart_toEndOf="@+id/card_image" />
@@ -37,13 +39,13 @@
     <TextView
         android:id="@+id/title_articles"
         android:layout_width="wrap_content"
-        android:maxWidth="275dp"
+        android:maxWidth="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/sample_title_articles"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textColor="@color/black"
+        android:textColor="@color/secondaryColor"
         app:layout_constraintBottom_toBottomOf="@+id/card_image"
         app:layout_constraintStart_toEndOf="@+id/card_image"
         app:layout_constraintTop_toTopOf="@+id/card_image"/>
@@ -57,6 +59,7 @@
         android:paddingHorizontal="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:backgroundTint="@color/primaryColor"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
